<?xml version="1.0"?>
<package>

  <name>aioros</name>
  <version>0.2.0</version>
  <description>Python 3 anyio based ROS client library</description>

  <author>Markus Grimm</author>
  <maintainer email="grimm.markus@gmail.com">Markus Grimm</maintainer>

  <license>Apache-2.0</license>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>genpy</run_depend>
  <run_depend>rosgraph_msgs</run_depend>
  <run_depend>python3-anyio</run_depend>
  <run_depend>python3-h11</run_depend>
  <run_depend>python3-httpx</run_depend>
  <run_depend>python3-lxml</run_depend>
  <test_depend>python3-pytest</test_depend>
  <test_depend>python3-pytest-cov</test_depend>
  <test_depend>python3-pytest-mock</test_depend>
  <test_depend>std_msgs</test_depend>

  <export />

</package>
